# Basic-KV-Store

./: CMakeLists.txt  README.md
include/: client.h  io_utils.h  kv_store.h  rw_disk.h  server.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/disk/: CMakeLists.txt  rw_disk.cpp
src/server/: CMakeLists.txt  server.cpp
src/store/: CMakeLists.txt  kv_store.cpp
tests/: CMakeLists.txt  client_test.cpp  kv_store_test.cpp  rw_disk_test.cpp  server_test.cpp
utils/: CMakeLists.txt  io_utils.cpp
